<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="add_contact">Add contact</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_email">Email</string>
    <string name="hint_birthday">Birthday (dd/mm/yyyy)</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_delete_contact_message">Are you sure you want to delete this contact?</string>
    <string name="format_full_name">%1$s %2$s</string>
    <string name="action_update">Update</string>
    <string name="action_message">Message</string>
    <string name="hint_message_body">Type a message</string>
    <string name="action_send">Send</string>
    <string name="label_me">Me</string>
    <string name="format_new_message_toast">New message from %1$s</string>
    <string name="format_last_backgrounded">Last backgrounded at %1$s</string>
    <string name="error_required_fields">First name, last name and phone number are required!</string>
    <string name="error_invalid_birthday">Birthday must be a valid date (dd/mm/yyyy)</string>
    <string name="error_sms_permission_denied">SMS permission not granted</string>
    <string name="menu_change_header_color">Change header color</string>
    <string name="color_default">Default</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_pink">Pink</string>
</resources>