<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_change_header_color"
        android:title="@string/menu_change_header_color">
        <menu>
            <item
                android:id="@+id/menu_color_default"
                android:title="@string/color_default" />
            <item
                android:id="@+id/menu_color_red"
                android:title="@string/color_red" />
            <item
                android:id="@+id/menu_color_green"
                android:title="@string/color_green" />
            <item
                android:id="@+id/menu_color_blue"
                android:title="@string/color_blue" />
            <item
                android:id="@+id/menu_color_pink"
                android:title="@string/color_pink" />
        </menu>
    </item>

</menu>
